add simple example of working 3x3

--- a/example.htm
+++ b/example.htm
@@ -4,13 +4,13 @@
 	<title>Scramble Usage Example</title>
 
 	<!-- Include the files for the puzzles you want. -->
-	<script src="bundle.js"></script>
+	<script src="scramby.js"></script>
 </head>
 <body>
 	<script>
 		// Tell the scrambler to initialize its tables.
 		scramblers["333"].initialize();
-		
+
 		for (var i=1; i <= 5; i++) {
 
 			// Generate a random scramble
