remove other scramblers for now, start adding flow types and update example

--- a/example_minimal.htm
+++ b/example_minimal.htm
@@ -1,4 +1,4 @@
 <script src="scramble_222.js"></script>
 <script>
-	document.write(scramblers["222"].getRandomScramble().scramble_string);
+	document.write(scramblers["222"].getRandomScramble().scrambleString);
 </script>
