--- a/examples/scramble-with-draw/index.html
+++ b/examples/scramble-with-draw/index.html
@@ -4,6 +4,8 @@
 	<title>Scramble Usage Example</title>
 </head>
 <body>
+	<div id="scramble"></div>
+	<div id="draw"></div>
 	<script src="bundle.js"></script>
 </body>
 </html>
