--- a/examples/scramble/index.html
+++ b/examples/scramble/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div id="scramble"></div>
-	<div id="draw"></div>
+	<button>New Scramble</button>
 	<script src="bundle.js"></script>
 </body>
 </html>
